# chonkie

./: pyproject.toml
.github/workflows/: docs.yml
docs/: .env.example  .gitignore  next.config.mjs  package.json
docs/app/: layout.tsx
docs/app/(docs)/: opengraph-image.tsx
docs/components/: docs-layout-client.tsx  product-switcher.tsx
docs/lib/: constants.ts  doc-collections.ts  docs-products.ts  filter-tree.ts  product-routes.ts  search.ts  sort-search-results.ts
docs/scripts/: fetch-releases.mjs
src/chonkie/: __init__.py
